--- a/ss_data_preparation.ipynb
+++ b/ss_data_preparation.ipynb
@@ -62,8 +62,7 @@
     "            config = yaml.safe_load(c_file)\n",
     "        return config\n",
     "    except Exception as error:\n",
-    "#       print('Error reading the config file ' + str(error))\n",
-    "        print('Error reading the config file ' + error)"
+    "        print('Error reading the config file ' + str(error))\n"
    ]
   },
   {
